--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
